# crypto-info-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile.devcontainer-check  devcontainer.json
.github/workflows/: dev-docker-cicd.yml  docker-cicd.yml
example/: all_test.py  client.py  smoke_client.py
scripts/: generate_session.py
src/: main.py
tests/: test_ci_workflows.py  test_example_client.py  test_generate_session.py  test_main.py  test_smoke_client.py
