[tool.poetry]
name = "crypto-info-mcp"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
telethon = "^1.40.0"
fastmcp = "^2.9.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
