[project]
name = "crypto-info-mcp"
version = "0.1.4"
description = "FastMCP service for crypto market summaries, CoinGecko coin details, and recent Telegram news."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "telethon>=1.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "requests>=2.32.0",
    "telethon>=1.42.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
